改为用usename，而不是email登录

--- a/src/app/main/auth/login/i18n/en.json
+++ b/src/app/main/auth/login/i18n/en.json
@@ -1,5 +1,6 @@
 {
     "LOGIN": {
+        "username": "Username",
         "TITLE": "Log in to your account",
         "INVALID": "Email or password error!",
         "EMAIL": "Email",
